--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
   "name": "react-suggestion-box",
   "version": "0.1.0",
-  "private": true,
+  "main": "lib/index.js",
+  "description": "React suggestion box with tag selections",
+  "author": "Amit jain",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:amit060292/react-suggestion-box.git"
+  },
+  "keywords": [
+    "react-suggestion-box",
+    "suggestion-box"
+  ],
   "dependencies": {
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-react": "^7.10.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.2",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "rm -rf lib && babel src --out-dir lib"
   },
   "eslintConfig": {
     "extends": "react-app"
