--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-suggestion-box",
+  "name": "react-tag-suggestion",
   "version": "0.1.0",
   "main": "lib/index.js",
   "description": "React suggestion box with tag selections",
@@ -9,8 +9,9 @@
     "url": "git@github.com:amit060292/react-suggestion-box.git"
   },
   "keywords": [
-    "react-suggestion-box",
-    "suggestion-box"
+    "react-suggestion",
+    "tag-suggestion",
+    "react-tag-suggestion"
   ],
   "dependencies": {
     "@babel/cli": "^7.11.6",
